--- a/build.gradle
+++ b/build.gradle
@@ -1,22 +1,40 @@
-plugins {
-    id 'java'
+buildscript {
+    ext {
+        springBootVersion = '3.0.1'
+    }
+    repositories {
+        mavenCentral()
+    }
+    dependencies {
+        classpath("org.springframework.boot:spring-boot-gradle-plugin:${springBootVersion}")
+    }
 }
 
-group 'com.example'
-version '0.0.1-SNAPSHOT'
+apply plugin: 'java'
+apply plugin: 'eclipse'
+apply plugin: 'org.springframework.boot'
+
+jar {
+    baseName = 'com.example'
+    version = '0.0.1-SNAPSHOT'
+}
+
+sourceCompatibility = 1.8
 
 repositories {
     mavenCentral()
 }
 
 dependencies {
-    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.9.0'
-    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.9.0'
-    implementation 'org.springframework.boot:spring-boot-starter-web'
+    implementation  'org.springframework.boot:spring-boot-starter'
+    implementation 'org.springframework.boot:spring-boot-starter-cache'
+    implementation 'org.springframework.boot:spring-boot-starter-data-rest'
+    implementation 'org.springframework.boot:spring-boot-starter-hateoas'
     implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
-    implementation 'mysql:mysql-connector-java'
-}
+    implementation'org.springframework.boot:spring-boot-starter-data-rest'
 
-test {
-    useJUnitPlatform()
+    implementation 'com.h2database:h2'
+
+    testimplementation 'org.springframework.boot:spring-boot-starter-test'
+    testimplementation 'org.springframework.restdocs:spring-restdocs-mockmvc'
 }
